--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Happy Birthday Miranda!</title>
+  <link href="style.css" type="text/css" rel="stylesheet" />
+  <link rel="shortcut icon" href="cake.ico" type="image/vnd.microsoft.icon" />
+  <script src="script.js" async=true></script>
+</head>
+<body>
+  <div id="background_cover">
+  </div>
+  <div>
+    <p id="birthday_text"> Happy 19th Birthday Miranda! </p>
+    <div id="image_container">
+      <img id="birthday_image" src="images/2006.jpg" />
+    </div>
+  </div>
+</body>
+</html>
